syntax = "proto3";

package oauth2.v1;
option go_package = "/oauth2/v1;oauth2V1";

service Oauth2Service {
  rpc AuthURL(AuthURLRequest) returns (AuthURLResponse);
  rpc VerifyCode(VerifyCodeRequest) returns (VerifyCodeResponse);
}

message AuthURLRequest {
  string state = 1;
}

message AuthURLResponse {
  string url = 1;
}

message VerifyCodeRequest {
  string code = 1;
  string state = 2;
}

message VerifyCodeResponse {
  string openId = 1;
  string UnionId = 2;
}